888 - Actualització estàndards RIPEA